# krsa_project_creator

./: .gitignore  .gitpod.Dockerfile  .pre-commit-config.yaml  .releaserc.yml  .rustfmt.toml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  about.toml
.github/: dependabot.yaml
.github/workflows/: audit.yaml  ci.yaml  code_coverage.yaml  deploy_mdbook.yaml  get_next_version.yaml  release.yaml  upload_binaries.yaml
meta/: LICENSE-HEADER
src/: main.rs
